--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-    "name": "application-name"
+    "name": "MecicanWaves"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
       "express": "2.5.8"
-    , "jade": ">= 0.0.1"
+    , "ejs": "~0.7.1"
+    , "socket.io": "~0.9.6"
+    , "pubnub": "~3.1.9"
+  }
+  , "engines": {
+    "node": "0.8.x"
   }
 }
