--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "express": "2.5.10"
     , "ejs": "~0.7.1"
     , "socket.io": "~0.9.6"
+    , "underscore": "1.3.1"
   }
   , "engines": {
     "node": "0.8.x"
